[package]
name = "rust-json-parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_json_parser"
# cdylib = Python-loadable .so/.dylib file
# rlib = regular Rust library for cargo test
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[features]
default = ["python"]
python = ["pyo3"]
